--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 crash.log
 crash.*.log
 
-# pem files
+## pem files
 *.pem
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
